--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -638,11 +638,12 @@ nav {
     padding: 20px; /* Reduced padding */
     height: auto;
     text-align: left; /* Align text to the left */
+    margin-top: 0; /* Reset margin-top */
   }
 
   #hero h1 {
     font-size: 24px; /* Adjusted font size for Mobile S */
-    margin-top: 10px;
+    margin-top: 0; /* Set margin-top to 0 initially */
     color: #000; /* Set text color to black */
   }
 
@@ -689,6 +690,7 @@ nav {
     font-size: 20px;
   }
 }
+
 
 
 
